# restcraft

./: .gitignore  Cargo.toml  LICENSE  README.md  THIRD-PARTY-NOTICES.md  extension.toml
.github/workflows/: ci.yml  release.yml
examples/: demo.http  demo.json  http-client.env.json
languages/http/: brackets.scm  config.toml  highlights.scm  injections.scm  outline.scm
languages/http-response/: config.toml  highlights.scm  injections.scm
lsp/: Cargo.toml
lsp/src/: backend.rs  clipboard.rs  completion.rs  curl.rs  digest.rs  history.rs  hover.rs  http.rs  main.rs  parser.rs  request_vars.rs  response.rs  settings.rs  state.rs  variables.rs
src/: lib.rs
