[package]
name = "restcraft-lsp"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[[bin]]
name = "restcraft-lsp"
path = "src/main.rs"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "cookies"] }
reqwest_cookie_store = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
rand = "0.9"
chrono = "0.4"
dirs = "6"
dashmap = "6"
thiserror = "2"
anyhow = "1"
base64 = "0.22"
percent-encoding = "2"
mime = "0.3"

# Standalone crate on purpose: the repository root is a WASM extension crate
# and must not pull this native binary into its build graph.
[workspace]
