[package]
name = "restcraft-lsp"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Language server backing the RestCraft REST client extension for Zed"
repository = "https://github.com/jidohyun/restcraft"
publish = false

[[bin]]
name = "restcraft-lsp"
path = "src/main.rs"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
# default-features off: native-tls (OpenSSL on Linux) breaks the musl
# cross-builds in release CI — rustls is pure-Rust and static-friendly.
# gzip/deflate/brotli auto-decompression matches upstream got's
# `decompress: true`.
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "cookies",
    "rustls-tls",
    "charset",
    "http2",
    "gzip",
    "deflate",
    "brotli",
] }
reqwest_cookie_store = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Request variable chaining (request_vars.rs): RFC 9535 JSONPath + XPath 1.0.
serde_json_path = "0.7"
sxd-document = "0.3"
sxd-xpath = "0.4"
uuid = { version = "1", features = ["v4"] }
# Digest auth challenge responses (http::digest): MD5 + MD5-sess.
md-5 = "0.10"
rand = "0.9"
chrono = "0.4"
dirs = "6"
dashmap = "6"
thiserror = "2"
anyhow = "1"
base64 = "0.22"
percent-encoding = "2"
mime = "0.3"
# curl import (curl.rs): POSIX-style tokenization of pasted curl commands.
shell-words = "1"

# Standalone crate on purpose: the repository root is a WASM extension crate
# and must not pull this native binary into its build graph.
[workspace]
